make sure images not too big

--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -14,7 +14,10 @@
    body { 
     padding-top: 50px;
   }
-
+  .row img {
+    max-width: 100%;
+    height: auto;
+  }
 //Remove the HTML5 spinner buttons on number inputs
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
